--- a/src/index.css
+++ b/src/index.css
@@ -29,3 +29,25 @@ body{
 .transition-height {
   transition: height 0.3s ease;
 }
+
+
+.progress-bar-container {
+  position: relative;
+  width: 100%;
+  height: 30px;
+  background-color: #f3f3f3;
+  border-radius: 5px;
+  overflow: hidden;
+ 
+}
+
+.progress-bar {
+  height: 100%;
+  padding: 10px; 
+  background-color: #22c55e;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  transition: width 0.2s;
+}
